--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "axios": "^1.12.2",
     "firebase": "^12.3.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.1",
