--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.12.2",
-    "firebase": "^12.3.0",
+    "firebase": "^12.4.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
@@ -20,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.1",
     "zod": "^4.1.11"
