--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
